--- a/PoS.BL/PoS.BL.csproj
+++ b/PoS.BL/PoS.BL.csproj
@@ -42,6 +42,9 @@
   <ItemGroup>
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\ISecurityService.cs" />
+    <Compile Include="Service\SecurityService.cs" />
+    <Compile Include="TServiceFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PoS.Dal.Mdl\PoS.Dal.Mdl.csproj">
