--- a/PoS/packages.config
+++ b/PoS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.5.0" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks" version="1.9.0" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.9.0" targetFramework="net452" />
