--- a/PoS/packages.config
+++ b/PoS/packages.config
@@ -6,6 +6,8 @@
   <package id="MahApps.Metro.IconPacks" version="1.9.0" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.9.0" targetFramework="net452" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
+  <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
+  <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net452" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net452" />
