--- a/PoS.BL/PoS.BL.csproj
+++ b/PoS.BL/PoS.BL.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\IInventoryService.cs" />
+    <Compile Include="Service\IModelBase.cs" />
+    <Compile Include="Service\InventoryService.cs" />
     <Compile Include="Service\ISecurityService.cs" />
     <Compile Include="Service\SecurityService.cs" />
     <Compile Include="TServiceFactory.cs" />
