--- a/PoS.Dal.Sql.Ctx/App.config
+++ b/PoS.Dal.Sql.Ctx/App.config
@@ -14,6 +14,10 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider></providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="PosDbConn" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=PoSDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="PosDbMySql" providerName="MySql.Data.MySqlClient" connectionString="server=localhost;port=3306;database=PoSDb;uid=root;"/>
+  </connectionStrings>
 <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
