--- a/PoS.BL/packages.config
+++ b/PoS.BL/packages.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="6.2.2" targetFramework="net452" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net452" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net452" />
+  <package id="Prism.Core" version="6.3.0" targetFramework="net452" />
+  <package id="Prism.Unity" version="6.3.0" targetFramework="net452" />
+  <package id="Prism.Wpf" version="6.3.0" targetFramework="net452" />
+  <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
