--- a/PoS.BL/PoS.BL.csproj
+++ b/PoS.BL/PoS.BL.csproj
@@ -86,10 +86,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMap\BaseMapper.cs" />
+    <Compile Include="AutoMap\UserMapper.cs" />
     <Compile Include="Models\ProductModel.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\Base\AbstractService.cs" />
+    <Compile Include="Service\Base\IBaseService.cs" />
     <Compile Include="Service\IInventoryService.cs" />
     <Compile Include="Service\IModelBase.cs" />
     <Compile Include="Service\Internal\InventoryService.cs" />
